Add logging/audit/perf aspects & infra
Introduce runtime and observability improvements across the backend: add Logging, Audit and Performance AOP aspects; enable scheduling in the main application; add async executors and richer cache configuration (Caffeine) with named caches. Revamp pom.xml to standardize project metadata and add required dependencies (JWT, OpenAPI, ZXing, Caffeine, Bucket4j, iText, Apache POI, Micrometer, etc.) and build plugin configuration. Remove CorsConfig and add SystemConfig service classes; also add multiple frontend service modules and utility updates. Overall changes improve monitoring, async processing, caching, dependency management and support new features (reporting, QR/barcode, rate limiting).